--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -4,8 +4,8 @@
 /* 定义变量 */
 :root {
   --color-text: #666;
-  --color-high-text: #ff6777;
-  --color-tint: #ff8198;
+  --color-high-text: #F63619;
+  --color-tint: #F63619;
   --color-background: #fff;
   --font-size: 14px;
   --line-hight: 1.5;
